--- a/1-hello-world/views/users/index.pug
+++ b/1-hello-world/views/users/index.pug
@@ -1,13 +1,19 @@
-h1 Users
-a(href="/users/create") New
+extends ../layouts/common.pug
 
-form(action="/users/search", method="GET")
- input(type="text", name="q")
- button Search
+block content
 
-ul
- each user in users
-  li
-   span= user.name
-   span &nbsp;
-   a(href='/users/'+ user.id ) View
+	h1 Users
+
+	a(href='/users/create') New
+
+	form(action="/users/search", method="GET", class="d-flex")
+		input(type="text", name="q", class="form-control")
+		button(class="btn btn-primary ml-2") Search
+
+	ul
+		each user in users
+			li
+				span= user.name
+				span &nbsp
+				a(href='/users/' + user.id) View
+
