--- a/views/transactions/transactions.pug
+++ b/views/transactions/transactions.pug
@@ -1,15 +1,10 @@
 extends ../layouts/common.pug
 block content
   h1 Transactions
-  
-  table.table
-    tr
-      th User Id
-      th Book Id
-      th Completed
-    each tran in trans
-      tr 
-        td= tran.userId
-        td= tran.bookId
-        td= tran.isCompleted
-  
+  ul
+   each tran in trans
+    li
+     span= tran.userId + tran.bookId + tran.isCompleted
+  if errors
+    each error in errors
+      .alert.alert-danger= error
