--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -11,5 +11,5 @@ block content
       input#email.form-control(name="email", type="text", value= values? values.email : '')
     .form-group
       label(for="password") Password
-      input#password.form-control(name="password", type="password")
+      input#password.form-control(name="password", type="login")
     button.btn.btn-primary Login
