--- a/views/transactions/manage.pug
+++ b/views/transactions/manage.pug
@@ -1,21 +1,12 @@
 extends ../layouts/common.pug
 block content
   h1 Transactions
-  
+  ul
+   each tran in trans
+    li
+     span= tran.userId + tran.bookId + tran.isCompleted
+     span &nbsp
+     a(href='/transactions/' + tran.id + '/complete') Complete
   if errors
     each error in errors
       .alert.alert-danger= error
-      
-  table.table
-    tr
-      th User Id
-      th Book Id
-      th Completion
-    each tran in trans
-      tr 
-        td= tran.userId
-        td= tran.bookId
-        td= tran.isCompleted
-        td
-          a(href='/transactions/' + tran.id + '/complete') Complete
-  
